--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Temperature</string>
+    <string name="label_city">City:</string>
+    <string name="label_temperature">Temperature:</string>
+    <string name="download_temperature">Download</string>
 </resources>
